--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
       img {
         width: 400px;
-        height: 200px;
+        height: 400px;
         object-fit: cover;
       }
     </style>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="col-xl-6">
                       <img
-                      src="/images/Download.png"
+                      src="images/Download.png"
                       alt="Install Thunderbird"
                       class="image-step img-fluid"
                     />
@@ -163,7 +163,7 @@
           <div class="col-xl-6">
             <div class="image-step">
               <img
-                src="/images/Content1.png"
+                src="images/Content1.png"
                 alt="Launch Thunderbird"
                 class="img-fluid"
               />
@@ -179,7 +179,7 @@
           <div class="col-xl-6">
             <div class="image-step">
               <img
-                src="/images/Content2.png"
+                src="images/Content2.png"
                 alt="Launch Thunderbird"
                 class="img-fluid"
               />
@@ -197,7 +197,7 @@
           <div class="col-xl-6">
             <div class="image-step">
               <img
-                src="/images/Content4.png"
+                src="images/Content4.png"
                 alt="Launch Thunderbird"
                 class="img-fluid"
               />
@@ -214,7 +214,7 @@
           <div class="col-xl-6">
             <div class="image-step">
               <img
-                src="/images/Content5.png"
+                src="images/Content5.png"
                 alt="Launch Thunderbird"
                 class="img-fluid"
               />
@@ -226,7 +226,7 @@
           <div class="col-xl-6">
             <div class="image-step">
               <img
-                src="/images/Content6.png"
+                src="images/Content6.png"
                 alt="Launch Thunderbird"
                 class="img-fluid"
               />
