--- a/assets/html/outlook.html
+++ b/assets/html/outlook.html
@@ -43,35 +43,24 @@
           text-align: center;
         }
       }
-
       @media (min-width: 576px) and (max-width: 767px) {
-        /* Small devices (landscape phones, 576px and up) */
         h1 {
           font-size: 1.8rem;
         }
       }
-
       @media (min-width: 768px) {
-        /* Medium devices (tablets, 768px and up) */
         h1 {
           font-size: 2rem;
         }
       }
     </style>
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
     <script defer src="script.js"></script>
   </head>
   <body>
     <header
       class="bg-primary text-white text-center py-3"
-      style="
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 2rem;
-      "
+      style="display: flex; justify-content: space-between; align-items: center; padding: 0 2rem;"
     >
-      <!-- Left Section -->
       <ul style="list-style: none; margin: 0; padding: 0">
         <li>
           <h1 style="margin: 0">User Guideline</h1>
@@ -98,14 +87,10 @@
               <a class="nav-link" href="/index.html">Mozilla Thunderbird</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./outlook.html"
-                >Microsoft Outlook</a
-              >
+              <a class="nav-link" href="./outlook.html">Microsoft Outlook</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./gmailguideline.html"
-                >Google Mail Send As</a
-              >
+              <a class="nav-link" href="./gmailguideline.html">Google Mail Send As</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -116,17 +101,9 @@
           <ul></ul>
           <ul>
             <img
-              style="
-                width: 40px;
-                height: 40px;
-                position: absolute;
-                top: 53%;
-                margin-top: 7px;
-                left: 50%;
-                transform: translate(-50%, -50%);
-              "
-              src="/images/outlook.png"
-              alt=""
+              style="width: 40px; height: 40px; position: absolute; top: 53%; margin-top: 7px; left: 50%; transform: translate(-50%, -50%);"
+              src="./images/outlook.png"
+              alt="Outlook Icon"
             />
           </ul>
         </div>
@@ -143,8 +120,8 @@
           <section class="main-mt">
             <nav class="image-mt">
               <img
-                src="../images/1614526-0-28529800-1742287768-outlook-cheat-sheet-primary-2000px-removebg-preview.png"
-                alt=""
+                src="./images/1614526-0-28529800-1742287768-outlook-cheat-sheet-primary-2000px-removebg-preview.png"
+                alt="Outlook Cheat Sheet"
               />
             </nav>
           </section>
@@ -153,22 +130,12 @@
             <p style="font-size: 1.5rem; padding: 1rem 0">
               (Redirected from
               <span
-                style="
-                  color: #0509ff;
-                  text-decoration: underline;
-                  cursor: pointer;
-                "
+                style="color: #0509ff; text-decoration: underline; cursor: pointer"
                 >How to download and install Outlook on Windows</span
               >)
             </p>
             <div
-              style="
-                display: flex;
-                align-items: center;
-                gap: 1.5rem;
-                border-bottom: 1px solid black;
-                padding: 2rem 0;
-              "
+              style="display: flex; align-items: center; gap: 1.5rem; border-bottom: 1px solid black; padding: 2rem 0;"
             >
               <p style="font-weight: bold">Outlook</p>
               <p style="font-weight: bold">
@@ -176,7 +143,6 @@
                   <i class="fa-solid fa-pencil"></i> Last updated:<p id="dateDisplay"></p>
                 </p>
               </p>
-          
               <p style="font-weight: bold">
                 <span><i class="fa-solid fa-thumbs-up"></i></span> 55%
               </p>
@@ -193,30 +159,29 @@
                   style="color: #0509ff; text-decoration: underline"
                   >this Outlook download page</a
                 >
-                in any browser,such as Microsoft Edge
+                in any browser, such as Microsoft Edge
               </p>
               <p>
                 2. Click the <button>Download</button> button. The Outlook
                 Installer that downloads will automatically offer you the best
-                <br />
                 available version of Outlook for your Computer.
               </p>
-              <img src="/assets/images/image.png" alt="" />
+              <img src="./images/image.png" alt="Download Button" />
               <p class="mt-5">
                 3. Click Open file in the Downloads notification on Microsoft
                 Edge to start the process.
               </p>
-              <img src="/assets/images/OpenFile.png" alt="" />
+              <img src="./images/OpenFile.png" alt="Open File Prompt" />
               <p class="mt-5">
                 4. In other browsers, you may need to first save the Outlook
                 installer to your computer, then open the file you <br />
                 , Just waiting the updates...
               </p>
-              <img src="/assets/images/step3.png" alt="" />
+              <img src="./images/step3.png" alt="Installation Step 3" />
               <p class="mt-5">
                 5. Click Update Button and wait the process again.
               </p>
-              <img src="/assets/images/ClicUp.png" alt="" />
+              <img src="./images/ClicUp.png" alt="Update Button" />
               <p class="mt-5">
                 6. Choose your Microsoft or your Gmail Account if you have, but
                 you don't have acc you can click
@@ -228,89 +193,84 @@
                 and <br />
                 click continue button
               </p>
-              <img src="/assets/images/setemail.png" alt="" />
+              <img src="./images/setemail.png" alt="Set Email Account" />
               <div class="row mt-5">
                 <div class="col-lg-6">
                   Enter Password...
-                  <img src="/assets/images/setpassword.png" alt="" />
+                  <img src="./images/setpassword.png" alt="Set Password" />
                 </div>
                 <div class="col-lg-6">
                   Enter First Name and Last ...
-                  <img src="/assets/images/SetUsername.png" alt="" />
+                  <img src="./images/SetUsername.png" alt="Set Username" />
                 </div>
               </div>
-
               <p>7. And waiting for your account email provider</p>
-              <img src="../images/Screenshot 2025-04-01 141434.png" alt="" />
+              <img src="./images/Screenshot 2025-04-01 141434.png" alt="Account Setup" />
               <p>
                 8.Microsoft respects your privacy,Enter code and please click
                 Next button.
                 <br />
               </p>
-              <img src="/assets/images/Success.png" alt="" />
+              <img src="./images/Success.png" alt="Success Screen" />
               <p>
                 9.So, Your Setup is success, Any Question you keep yourselt.
               </p>
-              <img src="/assets/images/Done.png" alt="" />
-
+              <img src="./images/Done.png" alt="Setup Complete" />
               <p class="mt-5">
                 10. ALso you can open file word and share to your friend or your
                 family...
               </p>
-              <img src="/assets/images/Word.png" alt="" />
-
-              <img src="/assets/images/powerpoint.png" alt="" />
+              <img src="./images/Word.png" alt="Word Document" />
+              <img src="./images/powerpoint.png" alt="PowerPoint" />
+              <p class="mt-4">
+                The page lists various Microsoft 365 applications, including Word,
+                Excel, PowerPoint, OneDrive, Outlook, Teams, and Clipchamp, with
+                brief descriptions of their functionalities. Additional apps such
+                as Calendar, Designer, Editor, Forms, Lists, Loop, Microsoft
+                Defender, OneNote, People, Power Automate, Reading Coach, Sway,
+                and To Do are also featured under the "More from Microsoft 365"
+                section, each with a short description of their purpose. The
+                interface includes options to "Install apps" and a "Buy Microsoft
+                365" button.
+                <img src="./images/fulloption.png" alt="Microsoft 365 Options" />
+              </p>
             </div>
-            <p class="mt-4">
-              The page lists various Microsoft 365 applications, including Word,
-              Excel, PowerPoint, OneDrive, Outlook, Teams, and Clipchamp, with
-              brief descriptions of their functionalities. Additional apps such
-              as Calendar, Designer, Editor, Forms, Lists, Loop, Microsoft
-              Defender, OneNote, People, Power Automate, Reading Coach, Sway,
-              and To Do are also featured under the "More from Microsoft 365"
-              section, each with a short description of their purpose. The
-              interface includes options to "Install apps" and a "Buy Microsoft
-              365" button.
-              <img src="/assets/images/fulloption.png" alt="" />
-            </p>
-          </section>
-          <section class="list-Problem mt-5">
-            <h4 style="font-style: normal; font-size: 3rem">
-              Having problems?
-            </h4>
-            <p class="p-problem">Here are some articles that can help you:</p>
-            <ul class="list-hav">
-              <li class="list-link-hav">
-                <a href="">Windows in S mode won't let me install Outlook</a>
-              </li>
-              <li class="list-link-hav">
-                <a href="">Make Outlook your default browser on windows</a>
-              </li>
-              <li class="list-link-hav">
-                <a href="">Make Outlook your default browser</a>
-              </li>
-              <li class="list-link-hav">
-                <a href="">Outlook won't start - find solutions</a>
-              </li>
-              <li class="list-link-hav">
-                <a href="">Troubleshoot and diagnose Outlook problems</a>
-              </li>
-              <li class="list-link-hav">
-                <a href=""
-                  >Why do i get a harmful download message when downloading
-                  Outlook on Windows?</a
+            <section class="list-Problem mt-5">
+              <h4 style="font-style: normal; font-size: 3rem">Having problems?</h4>
+              <p class="p-problem">Here are some articles that can help you:</p>
+              <ul class="list-hav">
+                <li class="list-link-hav">
+                  <a href="">Windows in S mode won't let me install Outlook</a>
+                </li>
+                <li class="list-link-hav">
+                  <a href="">Make Outlook your default browser on windows</a>
+                </li>
+                <li class="list-link-hav">
+                  <a href="">Make Outlook your default browser</a>
+                </li>
+                <li class="list-link-hav">
+                  <a href="">Outlook won't start - find solutions</a>
+                </li>
+                <li class="list-link-hav">
+                  <a href="">Troubleshoot and diagnose Outlook problems</a>
+                </li>
+                <li class="list-link-hav">
+                  <a href=""
+                    >Why do i get a harmful download message when downloading
+                    Outlook on Windows?</a
+                  >
+                </li>
+              </ul>
+              <p class="p-problem">
+                If you need more help, you can always get community support.
+              </p>
+              <p>
+                Share this article:
+                <a href="https://t.me/thany_oun" style="color: #0509ff"
+                  >Oun Thany</a
                 >
-              </li>
-            </ul>
-            <p class="p-problem">
-              If you need more help, you can always get community support.
-            </p>
-            <p>
-              Share this article:
-              <a href=" https://t.me/thany_oun" style="color: #0509ff"
-                >Oun Thany</a
-              >
-            </p>
+              </p>
+            </section>
           </section>
         </div>
       </section>
@@ -334,9 +294,7 @@
                   to common questions to make the most of your experience.
                 </p>
               </div>
-
               <hr class="w-100 clearfix d-md-none" />
-
               <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
                 <p>
@@ -349,9 +307,7 @@
                   <a class="text-white">Google mail Send As</a>
                 </p>
               </div>
-
               <hr class="w-100 clearfix d-md-none" />
-
               <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">
                   Useful links
@@ -369,9 +325,7 @@
                   <a class="text-white">Help</a>
                 </p>
               </div>
-
               <hr class="w-100 clearfix d-md-none" />
-
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
                 <p>
@@ -384,9 +338,7 @@
               </div>
             </div>
           </section>
-
           <hr class="my-3" />
-
           <section class="p-3 pt-0">
             <div class="row d-flex align-items-center">
               <div class="col-md-7 col-lg-8 text-center text-md-start">
@@ -395,7 +347,6 @@
                   <a class="text-white" href="#">TheyKnowMeThany.com</a>
                 </div>
               </div>
-
               <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
                 <a
                   class="btn btn-outline-light btn-floating m-1"
@@ -403,21 +354,18 @@
                   role="button"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
-
                 <a
                   class="btn btn-outline-light btn-floating m-1"
                   class="text-white"
                   role="button"
                   ><i class="fab fa-twitter"></i
                 ></a>
-
                 <a
                   class="btn btn-outline-light btn-floating m-1"
                   class="text-white"
                   role="button"
                   ><i class="fab fa-google"></i
                 ></a>
-
                 <a
                   class="btn btn-outline-light btn-floating m-1"
                   class="text-white"
@@ -430,8 +378,6 @@
         </div>
       </footer>
     </div>
-    <!-- End of .container -->
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
