--- a/assets/html/gmailguideline.html
+++ b/assets/html/gmailguideline.html
@@ -21,30 +21,22 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/assets/css/gmail.css">
+    <link rel="stylesheet" href="/assets/css/gmail.css" />
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <script defer src="script.js"></script>
   </head>
   <body>
     <header
       class="bg-primary text-white text-center py-3"
-      style="
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 2rem;
-      "
+      style="display: flex; justify-content: space-between; align-items: center; padding: 0 2rem;"
     >
-      <!-- Left Section -->
       <ul style="list-style: none; margin: 0; padding: 0">
         <li>
           <h1 style="margin: 0">User Guideline</h1>
         </li>
       </ul>
-      <ul>
-      </ul>
-      <ul>
-      </ul>
+      <ul></ul>
+      <ul></ul>
       <ul></ul>
     </header>
 
@@ -70,9 +62,7 @@
               <a class="nav-link" href="/index.html">Mozilla Thunderbird</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./outlook.html"
-                >Microsoft Outlook</a
-              >
+              <a class="nav-link" href="./outlook.html">Microsoft Outlook</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./gmailguideline.html">Google Mail Send As</a>
@@ -86,24 +76,15 @@
           <ul></ul>
           <ul>
             <img
-              style="
-                width: 40px;
-                height: 40px;
-                position: absolute;
-                top: 53%;
-                margin-top: 7px;
-                left: 50%;
-                transform: translate(-50%, -50%);
-              "
-              src="/images/Gmail_icon.png"
-              alt=""
+              style="width: 40px; height: 40px; position: absolute; top: 53%; margin-top: 7px; left: 50%; transform: translate(-50%, -50%);"
+              src="./images/Gmail_icon.png"
+              alt="Gmail Icon"
             />
           </ul>
         </div>
       </div>
     </nav>
     <div class="container my-5">
-      <!-- Header Section -->
       <div class="row mb-4">
         <div class="col-lg-8">
           <h2>How to create Gmail on Windows</h2>
@@ -113,7 +94,7 @@
               class="text-primary text-decoration-underline"
               style="cursor: pointer"
             >
-              How to create Gmail on Windows <a href=""> Develop by Mr. Thany</a> </span
+              How to create Gmail on Windows <a href="">Develop by Mr. Thany</a></span
             >)
           </p>
           <div class="d-flex align-items-center gap-3 border-bottom pb-3">
@@ -124,14 +105,10 @@
             <p></p>
             <p class="fw-bold"><i class="fa-solid fa-thumbs-up"></i> 90%</p>
             <p>of users voted this helpful</p>
-             
-
           </div>
         </div>
-
       </div>
 
-      <!-- Installation Guide -->
       <div class="row mb-4">
         <div class="col-lg-8">
           <p class="text-muted">To Install Gmail on your computer</p>
@@ -151,45 +128,43 @@
               Gmail Installer will offer the best version. Click “No thank” if
               it's not for a child.
             </li>
-            <img src="/images/gmailstep1.png" class="img-fluid my-3" alt="" />
+            <img src="./images/gmailstep1.png" class="img-fluid my-3" alt="Gmail Step 1" />
             <li>
               Click <span class="text-primary">Yes, continue</span> if you are a
               child.
             </li>
-            <img src="/images/gmailstep1.png" class="img-fluid my-3" alt="" />
+            <img src="./images/gmailstep1.png" class="img-fluid my-3" alt="Gmail Step 1" />
             <li>
               Complete your name and click
               <span class="text-primary">Next</span>.
             </li>
-            <img src="/images/gmailstep2.png" class="img-fluid my-3" alt="" />
+            <img src="./images/gmailstep2.png" class="img-fluid my-3" alt="Gmail Step 2" />
             <li>
               Enter birthday and gender. Then click
               <span class="text-primary">Next</span>.
             </li>
-            <img src="/images/gmailstep3.png" class="img-fluid my-3" alt="" />
+            <img src="./images/gmailstep3.png" class="img-fluid my-3" alt="Gmail Step 3" />
             <li>
               Choose or create a Gmail address. Click
               <span class="text-primary">Next</span>.
             </li>
-            <img src="/images/gmailstep4.png" class="img-fluid my-3" alt="" />
+            <img src="./images/gmailstep4.png" class="img-fluid my-3" alt="Gmail Step 4" />
             <li>Create a password.</li>
-            <img src="/images/gmailstep5.png" class="img-fluid my-3" alt="" />
+            <img src="./images/gmailstep5.png" class="img-fluid my-3" alt="Gmail Step 5" />
             <li>Verify your phone number for security.</li>
-            <img src="/images/gmailstep6.png" class="img-fluid my-3" alt="" />
+            <img src="./images/gmailstep6.png" class="img-fluid my-3" alt="Gmail Step 6" />
             <li>Click Gmail and save your account in your browser.</li>
-            <img src="/images/gmailstep7.png" class="img-fluid my-3" alt="" />
+            <img src="./images/gmailstep7.png" class="img-fluid my-3" alt="Gmail Step 7" />
             <li>Finally, your Gmail account is set up.</li>
             <img
-              src="/images/Screenshot 2025-04-01 223522.png"
+              src="./images/Screenshot 2025-04-01 223522.png"
               class="img-fluid my-3"
-              alt=""
+              alt="Gmail Setup Complete"
             />
           </ol>
         </div>
-        <!-- Fix Card -->
-        <div class="col-lg-4 ">  
-
-          <div class="card"  style="width:20rem; position: sticky;right:2rem;top:3rem;">
+        <div class="col-lg-4">
+          <div class="card" style="width: 20rem; position: sticky; top: 3rem; right: 2rem;">
             <div class="card-title">Problems with sending</div>
             <ul class="card-list">
               <li>Fix bounced or rejected emails</li>
@@ -208,7 +183,6 @@
         </div>
       </div>
 
-      <!-- Help Section -->
       <div class="row mb-5">
         <div class="col">
           <h4 class="display-6">Having problems?</h4>
@@ -234,9 +208,6 @@
         </div>
       </div>
 
-
-
-      <!-- Related Articles -->
       <div class="row">
         <div class="col text-center mb-4">
           <h5 class="display-6">More Guideline Relate</h5>
@@ -270,7 +241,6 @@
               
               Help protect recipients from malicious messages, such as spoofing and phishing messages.
               Help protect you and your organization from being impersonated.
-
             </p>
           </div>
         </div>
@@ -296,9 +266,7 @@
                   to common questions to make the most of your experience.
                 </p>
               </div>
-
               <hr class="w-100 clearfix d-md-none" />
-
               <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
                 <p>
@@ -311,9 +279,7 @@
                   <a class="text-white">Google mail Send As</a>
                 </p>
               </div>
-
               <hr class="w-100 clearfix d-md-none" />
-
               <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">
                   Useful links
@@ -331,9 +297,7 @@
                   <a class="text-white">Help</a>
                 </p>
               </div>
-
               <hr class="w-100 clearfix d-md-none" />
-
               <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
                 <p>
@@ -346,9 +310,7 @@
               </div>
             </div>
           </section>
-
           <hr class="my-3" />
-
           <section class="p-3 pt-0">
             <div class="row d-flex align-items-center">
               <div class="col-md-7 col-lg-8 text-center text-md-start">
@@ -357,7 +319,6 @@
                   <a class="text-white" href="#">TheyKnowMeThany.com</a>
                 </div>
               </div>
-
               <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
                 <a
                   class="btn btn-outline-light btn-floating m-1"
@@ -365,21 +326,18 @@
                   role="button"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
-
                 <a
                   class="btn btn-outline-light btn-floating m-1"
                   class="text-white"
                   role="button"
                   ><i class="fab fa-twitter"></i
                 ></a>
-
                 <a
                   class="btn btn-outline-light btn-floating m-1"
                   class="text-white"
                   role="button"
                   ><i class="fab fa-google"></i
                 ></a>
-
                 <a
                   class="btn btn-outline-light btn-floating m-1"
                   class="text-white"
@@ -392,13 +350,38 @@
         </div>
       </footer>
     </div>
-    <!-- End of .container -->
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
-<script src="/assets/js/gmail.js">
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const sections = document.querySelectorAll("h3, p, ul, .image-step");
 
+    const observer = new IntersectionObserver(
+      (entries) => {
+        entries.forEach((entry) => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add("fade-in");
+          }
+        });
+      },
+      { threshold: 0.5 }
+    );
+
+    sections.forEach((section) => {
+      observer.observe(section);
+    });
+  });
+
+  const today = new Date();
+
+  const day = String(today.getDate()).padStart(2, "0");
+  const month = String(today.getMonth() + 1).padStart(2, "0");
+  const year = String(today.getFullYear()).slice(-2);
+
+  const formattedDate = `${day}-${month}-${year}`;
+
+  console.log("Today is:", formattedDate);
+  document.getElementById("dateDisplay").textContent = formattedDate;
 </script>
-
-
+<script src="/assets/js/gmail.js"></script>
