--- a/assets/html/outlook.html
+++ b/assets/html/outlook.html
@@ -21,7 +21,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <style>
       * {
         padding: 0;
@@ -54,7 +54,7 @@
         }
       }
     </style>
-    <script defer src="script.js"></script>
+    <script defer src="assets/js/main.js"></script>
   </head>
   <body>
     <header
@@ -84,13 +84,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Mozilla Thunderbird</a>
+              <a class="nav-link" href="index.html">Mozilla Thunderbird</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./outlook.html">Microsoft Outlook</a>
+              <a class="nav-link" href="assets/html/outlook.html">Microsoft Outlook</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./gmailguideline.html">Google Mail Send As</a>
+              <a class="nav-link" href="assets/html/gmailguideline.html">Google Mail Send As</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -102,7 +102,7 @@
           <ul>
             <img
               style="width: 40px; height: 40px; position: absolute; top: 53%; margin-top: 7px; left: 50%; transform: translate(-50%, -50%);"
-              src="./images/outlook.png"
+              src="images/outlook.png"
               alt="Outlook Icon"
             />
           </ul>
@@ -120,7 +120,7 @@
           <section class="main-mt">
             <nav class="image-mt">
               <img
-                src="./images/1614526-0-28529800-1742287768-outlook-cheat-sheet-primary-2000px-removebg-preview.png"
+                src="images/1614526-0-28529800-1742287768-outlook-cheat-sheet-primary-2000px-removebg-preview.png"
                 alt="Outlook Cheat Sheet"
               />
             </nav>
@@ -166,22 +166,22 @@
                 Installer that downloads will automatically offer you the best
                 available version of Outlook for your Computer.
               </p>
-              <img src="./images/image.png" alt="Download Button" />
+              <img src="images/image.png" alt="Download Button" />
               <p class="mt-5">
                 3. Click Open file in the Downloads notification on Microsoft
                 Edge to start the process.
               </p>
-              <img src="./images/OpenFile.png" alt="Open File Prompt" />
+              <img src="images/OpenFile.png" alt="Open File Prompt" />
               <p class="mt-5">
                 4. In other browsers, you may need to first save the Outlook
                 installer to your computer, then open the file you <br />
                 , Just waiting the updates...
               </p>
-              <img src="./images/step3.png" alt="Installation Step 3" />
+              <img src="images/step3.png" alt="Installation Step 3" />
               <p class="mt-5">
                 5. Click Update Button and wait the process again.
               </p>
-              <img src="./images/ClicUp.png" alt="Update Button" />
+              <img src="images/ClicUp.png" alt="Update Button" />
               <p class="mt-5">
                 6. Choose your Microsoft or your Gmail Account if you have, but
                 you don't have acc you can click
@@ -193,35 +193,35 @@
                 and <br />
                 click continue button
               </p>
-              <img src="./images/setemail.png" alt="Set Email Account" />
+              <img src="images/setemail.png" alt="Set Email Account" />
               <div class="row mt-5">
                 <div class="col-lg-6">
                   Enter Password...
-                  <img src="./images/setpassword.png" alt="Set Password" />
+                  <img src="images/setpassword.png" alt="Set Password" />
                 </div>
                 <div class="col-lg-6">
                   Enter First Name and Last ...
-                  <img src="./images/SetUsername.png" alt="Set Username" />
+                  <img src="images/SetUsername.png" alt="Set Username" />
                 </div>
               </div>
               <p>7. And waiting for your account email provider</p>
-              <img src="./images/Screenshot 2025-04-01 141434.png" alt="Account Setup" />
+              <img src="images/Screenshot 2025-04-01 141434.png" alt="Account Setup" />
               <p>
                 8.Microsoft respects your privacy,Enter code and please click
                 Next button.
                 <br />
               </p>
-              <img src="./images/Success.png" alt="Success Screen" />
+              <img src="images/Success.png" alt="Success Screen" />
               <p>
                 9.So, Your Setup is success, Any Question you keep yourselt.
               </p>
-              <img src="./images/Done.png" alt="Setup Complete" />
+              <img src="images/Done.png" alt="Setup Complete" />
               <p class="mt-5">
                 10. ALso you can open file word and share to your friend or your
                 family...
               </p>
-              <img src="./images/Word.png" alt="Word Document" />
-              <img src="./images/powerpoint.png" alt="PowerPoint" />
+              <img src="images/Word.png" alt="Word Document" />
+              <img src="images/powerpoint.png" alt="PowerPoint" />
               <p class="mt-4">
                 The page lists various Microsoft 365 applications, including Word,
                 Excel, PowerPoint, OneDrive, Outlook, Teams, and Clipchamp, with
@@ -232,7 +232,7 @@
                 section, each with a short description of their purpose. The
                 interface includes options to "Install apps" and a "Buy Microsoft
                 365" button.
-                <img src="./images/fulloption.png" alt="Microsoft 365 Options" />
+                <img src="images/fulloption.png" alt="Microsoft 365 Options" />
               </p>
             </div>
             <section class="list-Problem mt-5">
@@ -298,13 +298,13 @@
               <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
                 <p>
-                  <a class="text-white">Mozilla Thunderbird</a>
+                  <a class="text-white" href="index.html">Mozilla Thunderbird</a>
                 </p>
                 <p>
-                  <a class="text-white">Ms Outlook</a>
+                  <a class="text-white" href="assets/html/outlook.html">Ms Outlook</a>
                 </p>
                 <p>
-                  <a class="text-white">Google mail Send As</a>
+                  <a class="text-white" href="assets/html/gmailguideline.html">Google Mail Send As</a>
                 </p>
               </div>
               <hr class="w-100 clearfix d-md-none" />
@@ -313,16 +313,16 @@
                   Useful links
                 </h6>
                 <p>
-                  <a class="text-white">How to set up Mozilla?</a>
+                  <a class="text-white" href="#">How to set up Mozilla?</a>
                 </p>
                 <p>
-                  <a class="text-white">How to set up Outlook?</a>
+                  <a class="text-white" href="#">How to set up Outlook?</a>
                 </p>
                 <p>
-                  <a class="text-white">How to set up Google Mail send As?</a>
+                  <a class="text-white" href="#">How to set up Google Mail send As?</a>
                 </p>
                 <p>
-                  <a class="text-white">Help</a>
+                  <a class="text-white" href="#help">Help</a>
                 </p>
               </div>
               <hr class="w-100 clearfix d-md-none" />
