--- a/assets/html/gmailguideline.html
+++ b/assets/html/gmailguideline.html
@@ -21,9 +21,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/assets/css/gmail.css" />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="../css/gmail.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <script defer src="../js/main.js"></script>
   </head>
   <body>
     <header
@@ -59,13 +59,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Mozilla Thunderbird</a>
+              <a class="nav-link" href="../index.html">Mozilla Thunderbird</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./outlook.html">Microsoft Outlook</a>
+              <a class="nav-link" href="outlook.html">Microsoft Outlook</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./gmailguideline.html">Google Mail Send As</a>
+              <a class="nav-link" href="gmailguideline.html">Google Mail Send As</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -77,7 +77,7 @@
           <ul>
             <img
               style="width: 40px; height: 40px; position: absolute; top: 53%; margin-top: 7px; left: 50%; transform: translate(-50%, -50%);"
-              src="./images/Gmail_icon.png"
+              src="../../images/Gmail_icon.png"
               alt="Gmail Icon"
             />
           </ul>
@@ -128,36 +128,36 @@
               Gmail Installer will offer the best version. Click “No thank” if
               it's not for a child.
             </li>
-            <img src="./images/gmailstep1.png" class="img-fluid my-3" alt="Gmail Step 1" />
+            <img src="../../images/gmailstep1.png" class="img-fluid my-3" alt="Gmail Step 1" />
             <li>
               Click <span class="text-primary">Yes, continue</span> if you are a
               child.
             </li>
-            <img src="./images/gmailstep1.png" class="img-fluid my-3" alt="Gmail Step 1" />
+            <img src="../../images/gmailstep1.png" class="img-fluid my-3" alt="Gmail Step 1" />
             <li>
               Complete your name and click
               <span class="text-primary">Next</span>.
             </li>
-            <img src="./images/gmailstep2.png" class="img-fluid my-3" alt="Gmail Step 2" />
+            <img src="../../images/gmailstep2.png" class="img-fluid my-3" alt="Gmail Step 2" />
             <li>
               Enter birthday and gender. Then click
               <span class="text-primary">Next</span>.
             </li>
-            <img src="./images/gmailstep3.png" class="img-fluid my-3" alt="Gmail Step 3" />
+            <img src="../../images/gmailstep3.png" class="img-fluid my-3" alt="Gmail Step 3" />
             <li>
               Choose or create a Gmail address. Click
               <span class="text-primary">Next</span>.
             </li>
-            <img src="./images/gmailstep4.png" class="img-fluid my-3" alt="Gmail Step 4" />
+            <img src="../../images/gmailstep4.png" class="img-fluid my-3" alt="Gmail Step 4" />
             <li>Create a password.</li>
-            <img src="./images/gmailstep5.png" class="img-fluid my-3" alt="Gmail Step 5" />
+            <img src="../../images/gmailstep5.png" class="img-fluid my-3" alt="Gmail Step 5" />
             <li>Verify your phone number for security.</li>
-            <img src="./images/gmailstep6.png" class="img-fluid my-3" alt="Gmail Step 6" />
+            <img src="../../images/gmailstep6.png" class="img-fluid my-3" alt="Gmail Step 6" />
             <li>Click Gmail and save your account in your browser.</li>
-            <img src="./images/gmailstep7.png" class="img-fluid my-3" alt="Gmail Step 7" />
+            <img src="../../images/gmailstep7.png" class="img-fluid my-3" alt="Gmail Step 7" />
             <li>Finally, your Gmail account is set up.</li>
             <img
-              src="./images/Screenshot 2025-04-01 223522.png"
+              src="../../images/Screenshot 2025-04-01 223522.png"
               class="img-fluid my-3"
               alt="Gmail Setup Complete"
             />
@@ -270,13 +270,13 @@
               <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
                 <p>
-                  <a class="text-white">Mozilla Thunderbird</a>
+                  <a class="text-white" href="../index.html">Mozilla Thunderbird</a>
                 </p>
                 <p>
-                  <a class="text-white">Ms Outlook</a>
+                  <a class="text-white" href="outlook.html">Ms Outlook</a>
                 </p>
                 <p>
-                  <a class="text-white">Google mail Send As</a>
+                  <a class="text-white" href="gmailguideline.html">Google Mail Send As</a>
                 </p>
               </div>
               <hr class="w-100 clearfix d-md-none" />
@@ -285,16 +285,16 @@
                   Useful links
                 </h6>
                 <p>
-                  <a class="text-white">How to set up Mozilla?</a>
+                  <a class="text-white" href="#">How to set up Mozilla?</a>
                 </p>
                 <p>
-                  <a class="text-white">How to set up Outlook?</a>
+                  <a class="text-white" href="#">How to set up Outlook?</a>
                 </p>
                 <p>
-                  <a class="text-white">How to set up Google Mail send As?</a>
+                  <a class="text-white" href="#">How to set up Google Mail send As?</a>
                 </p>
                 <p>
-                  <a class="text-white">Help</a>
+                  <a class="text-white" href="#help">Help</a>
                 </p>
               </div>
               <hr class="w-100 clearfix d-md-none" />
@@ -384,4 +384,4 @@
   console.log("Today is:", formattedDate);
   document.getElementById("dateDisplay").textContent = formattedDate;
 </script>
-<script src="/assets/js/gmail.js"></script>
+<script src="../js/gmail.js"></script>
