--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         object-fit: cover;
       }
     </style>
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <script defer src="assets/js/main.js"></script>
   </head>
   <body>
     <header
@@ -66,13 +66,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Mozilla Thunderbird</a>
+              <a class="nav-link" href="index.html">Mozilla Thunderbird</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./assets/html/outlook.html">Microsoft Outlook</a>
+              <a class="nav-link" href="assets/html/outlook.html">Microsoft Outlook</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./assets/html/gmailguideline.html">Google Mail Send As</a>
+              <a class="nav-link" href="assets/html/gmailguideline.html">Google Mail Send As</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -86,7 +86,7 @@
           <ul>
             <img
               style="width: 40px; height: 40px; position: absolute; top: 53%; margin-top: 7px; left: 50%; transform: translate(-50%, -50%);"
-              src="./images/Thunderbird_2023_icon.svg.png"
+              src="images/Thunderbird_2023_icon.svg.png"
               alt="Thunderbird Icon"
             />
           </ul>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col-xl-6">
                   <img
-                    src="./images/Download.png"
+                    src="images/Download.png"
                     alt="Install Thunderbird"
                     class="image-step img-fluid"
                   />
@@ -150,7 +150,7 @@
           <div class="col-xl-6">
             <div class="image-step">
               <img
-                src="./images/Content1.png"
+                src="images/Content1.png"
                 alt="Launch Thunderbird"
                 class="img-fluid"
               />
@@ -164,7 +164,7 @@
           <div class="col-xl-6">
             <div class="image-step">
               <img
-                src="./images/Content2.png"
+                src="images/Content2.png"
                 alt="Launch Thunderbird"
                 class="img-fluid"
               />
@@ -181,7 +181,7 @@
           <div class="col-xl-6">
             <div class="image-step">
               <img
-                src="./images/Content4.png"
+                src="images/Content4.png"
                 alt="Launch Thunderbird"
                 class="img-fluid"
               />
@@ -198,7 +198,7 @@
           <div class="col-xl-6">
             <div class="image-step">
               <img
-                src="./images/Content5.png"
+                src="images/Content5.png"
                 alt="Launch Thunderbird"
                 class="img-fluid"
               />
@@ -209,7 +209,7 @@
           <div class="col-xl-6">
             <div class="image-step">
               <img
-                src="./images/Content6.png"
+                src="images/Content6.png"
                 alt="Launch Thunderbird"
                 class="img-fluid"
               />
@@ -231,7 +231,7 @@
           set up your email account:
           <div class="image-step">
             <img
-              src="./images/setemail1.png"
+              src="images/setemail1.png"
               alt="Launch Thunderbird"
               class="img-fluid"
             />
@@ -259,7 +259,7 @@
         </ol>
         <div class="image-step">
           <img
-            src="./images/input_email.png"
+            src="images/input_email.png"
             alt="Setup Email Account"
             class="img-fluid"
           />
@@ -284,7 +284,7 @@
         </ul>
         <div class="image-step">
           <img
-            src="./images/email2.png"
+            src="images/email2.png"
             alt="Email Server Settings"
             class="img-fluid"
           />
@@ -302,7 +302,7 @@
         </p>
         <div class="image-step">
           <img
-            src="./images/email6.png"
+            src="images/email6.png"
             alt="Confirm Settings"
             class="img-fluid"
           />
@@ -327,11 +327,11 @@
         </ol>
         <div class="image-step">
           <img
-            src="./images/finalsetup.png"
+            src="images/finalsetup.png"
             alt="Add Email Account"
             class="img-fluid"
           />
-          <img src="./images/addMail.png" alt="" class="img-fluid me-4" />
+          <img src="images/addMail.png" alt="" class="img-fluid me-4" />
           <p>
             Example: Add additional email accounts by accessing Account Settings
             in Thunderbird.
@@ -355,12 +355,12 @@
         </ol>
         <div class="image-step">
           <img
-            src="./images/finalsetup.png"
+            src="images/finalsetup.png"
             alt="Add Email Account"
             class="img-fluid"
           />
           <img
-            src="./images/writemail.png"
+            src="images/writemail.png"
             alt="Send Email"
             class="img-fluid"
           />
@@ -477,13 +477,13 @@
               <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                 <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
                 <p>
-                  <a class="text-white">Mozilla Thunderbird</a>
+                  <a class="text-white" href="index.html">Mozilla Thunderbird</a>
                 </p>
                 <p>
-                  <a class="text-white">Ms Outlook</a>
+                  <a class="text-white" href="assets/html/outlook.html">Ms Outlook</a>
                 </p>
                 <p>
-                  <a class="text-white">Google mail Send As</a>
+                  <a class="text-white" href="assets/html/gmailguideline.html">Google Mail Send As</a>
                 </p>
               </div>
 
@@ -494,16 +494,16 @@
                   Useful links
                 </h6>
                 <p>
-                  <a class="text-white">How to set up Mozilla?</a>
+                  <a class="text-white" href="index.html">How to set up Mozilla?</a>
                 </p>
                 <p>
-                  <a class="text-white">How to set up Outlook?</a>
+                  <a class="text-white" href="assets/html/outlook.html">How to set up Outlook?</a>
                 </p>
                 <p>
-                  <a class="text-white">How to set up Google Mail send As?</a>
+                  <a class="text-white" href="assets/html/gmailguideline.html">How to set up Google Mail send As?</a>
                 </p>
                 <p>
-                  <a class="text-white">Help</a>
+                  <a class="text-white" href="#help">Help</a>
                 </p>
               </div>
 
