--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         text-decoration: none;
       }
       img {
-        width: 400px;
-        height: 400px;
+        width: 800px;
+        height: auto;
         object-fit: cover;
       }
     </style>
@@ -75,10 +75,10 @@
               <a class="nav-link" href="assets/html/gmailguideline.html">Google Mail Send As</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#help">Help</a>
+              <a class="nav-link" href="#">Help</a>
             </li>
           </ul>
           <ul></ul>
