--- a/assets/html/gmailguideline.html
+++ b/assets/html/gmailguideline.html
@@ -59,7 +59,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">Mozilla Thunderbird</a>
+              <a class="nav-link" href="/index.html">Mozilla Thunderbird</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="outlook.html">Microsoft Outlook</a>
